RESOLVED FIXED271736
Fix http/tests/workers/service/openwindow-from-notification-click.html
https://bugs.webkit.org/show_bug.cgi?id=271736
Summary Fix http/tests/workers/service/openwindow-from-notification-click.html
Alex Christensen
Reported 2024-03-26 17:08:23 PDT
Attachments
Alex Christensen
Comment 1 2024-03-26 17:09:50 PDT
EWS
Comment 2 2024-03-26 21:25:33 PDT
Committed 276721@main (02eeb88eab8d): <https://commits.webkit.org/276721@main> Reviewed commits have been landed. Closing PR #26492 and removing active labels.
Charlie Wolfe
Comment 3 2024-03-27 18:17:31 PDT
*** Bug 271725 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.