Fix http/tests/workers/service/openwindow-from-notification-click.html https://bugs.webkit.org/show_bug.cgi?id=271736 rdar://125438183

Reviewed by Charlie Wolfe.

The PlatformWebView ctor now assumes the configuration is non-null.
Make this true.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Tools/WebKitTestRunner/cocoa/TestWebsiteDataStoreDelegate.mm:
(-[TestWebsiteDataStoreDelegate websiteDataStore:openWindow:fromServiceWorkerOrigin:completionHandler:]):

* tmp: Added.
Canonical link: https://commits.webkit.org/276721@main